<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <EditText
        android:id="@+id/inputUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/server_url"
        android:inputType="textUri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputToken"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/jwt_token"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/inputUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_disconnected"
        app:layout_constraintTop_toBottomOf="@id/inputToken"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/inputToken"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@id/statusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnStop"
        app:layout_constraintHorizontalWeight="1"/>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintTop_toBottomOf="@id/statusText"
        app:layout_constraintStart_toEndOf="@id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontalWeight="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>